adding sampling: perturb+swap

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -428,23 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'feat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mfeat\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'feat' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "3474.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "feat"
+    "27796/8"
    ]
   },
   {
@@ -722,29 +721,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ggbhatt/anaconda3/envs/rank1/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/ggbhatt/anaconda3/envs/rank1/lib/python3.9/site-packages/jax/_src/xla_bridge.py\", line 430, in discover_pjrt_plugins\n",
-      "    plugin_module.initialize()\n",
-      "  File \"/home/ggbhatt/anaconda3/envs/rank1/lib/python3.9/site-packages/jax_plugins/xla_cuda12/__init__.py\", line 78, in initialize\n",
-      "    options = xla_client.generate_pjrt_gpu_plugin_options()\n",
-      "AttributeError: module 'jaxlib.xla_client' has no attribute 'generate_pjrt_gpu_plugin_options'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "from torch.utils.data import DataLoader\n",
-    "from bbm.src.model import CrossEncoder\n",
+    "#from bbm.src.model import CrossEncoder\n",
     "from src.data import collate_fn\n",
     "import numpy as np\n",
     "import torch\n",
@@ -755,22 +738,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at philipphager/baidu-ultr_uva-bert_dla were not used when initializing CrossEncoder: {('propensities', 'embedding')}\n",
-      "- This IS expected if you are initializing CrossEncoder from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing CrossEncoder from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of the model checkpoint at philipphager/baidu-ultr_uva-bert_twotower were not used when initializing CrossEncoder: {('propensities', 'embedding')}\n",
-      "- This IS expected if you are initializing CrossEncoder from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing CrossEncoder from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 8\n",
     "dataset = load_dataset(\n",
@@ -793,10 +763,10 @@
     "#     collate_fn=collate_click_fn,\n",
     "# )\n",
     "\n",
-    "model = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_naive-pointwise\")\n",
-    "model1 = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_dla\")\n",
-    "model2 = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_ips-listwise\")\n",
-    "model4 = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_twotower\")"
+    "# model = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_naive-pointwise\")\n",
+    "# model1 = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_dla\")\n",
+    "# model2 = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_ips-listwise\")\n",
+    "# model4 = CrossEncoder.from_pretrained(\"philipphager/baidu-ultr_uva-bert_twotower\")"
    ]
   },
   {
@@ -821,18 +791,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch1 = next(iter(click_loader))\n",
     "\n",
-    "new_batch = {'tokens':batch1['tokens'].reshape(batch_size*9,128),\n",
-    "             'attention_mask':batch1['attention_mask'].reshape(batch_size*9,128),\n",
-    "             'token_types':batch1['token_types'].reshape(batch_size*9,128)}\n",
-    "out_c = model(new_batch)\n",
-    "out_c1 = model1(new_batch)\n",
-    "out_c2 = model(new_batch)\n",
+    "# new_batch = {'tokens':batch1['tokens'].reshape(batch_size*9,128),\n",
+    "#              'attention_mask':batch1['attention_mask'].reshape(batch_size*9,128),\n",
+    "#              'token_types':batch1['token_types'].reshape(batch_size*9,128)}\n",
+    "# out_c = model(new_batch)\n",
+    "# out_c1 = model1(new_batch)\n",
+    "# out_c2 = model(new_batch)\n",
     "\n",
     "# Use model only for relevance prediction, e.g., for evaluation:\n",
     "# out_r = model.predict_relevance(batch2)"
@@ -840,34 +810,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = []\n",
-    "\n",
-    "for i in range(4):\n",
-    "    m+=[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1, 1, 1]"
+       "tensor([0.9000, 0.8500, 0.8500, 0.0000, 0.0000, 0.0000, 0.8500, 0.9000])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m"
+    "a1 = torch.tensor(batch1['click'])\n",
+    "(0.8 + a1.sum(dim=1) * 0.05)*torch.clamp(a1.sum(dim=1), max=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 1, 0, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch1['click']"
    ]
   },
   {
@@ -1081,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1111,27 @@
     "        # Set the weight of the sampled index to 0 for the next iteration\n",
     "        weights[sampled_index] = 0\n",
     "\n",
-    "    return d_pos"
+    "    return d_pos\n",
+    "\n",
+    "def sample_swap(pos, click=None, fn='rand'):\n",
+    "    \n",
+    "    def swap(pos, idx):    \n",
+    "        temp = pos[idx].clone()\n",
+    "        pos[idx] = pos[-1]\n",
+    "        pos[-1] = temp\n",
+    "        return pos\n",
+    "    \n",
+    "    if fn == 'rand':\n",
+    "        return swap(pos, idx=0)\n",
+    "    if click.sum()>0:\n",
+    "        indices = (click == 1).nonzero()\n",
+    "        if fn=='first_click_bot':\n",
+    "            idx = indices[0].item()\n",
+    "        elif fn=='first_click_top':\n",
+    "            idx = indices[-1].item()\n",
+    "        return swap(pos, idx)\n",
+    "        \n",
+    "    return pos\n"
    ]
   },
   {
@@ -1161,22 +1167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "tensor([ 1.,  4.,  5.,  7.,  8., 91., 21.,  2.])"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(0.1*5)"
+    "import torch\n",
+    "pos = torch.tensor([2,4,5,7,8,91,21,1]).float()\n",
+    "sample_swap(pos)"
    ]
   },
   {
@@ -1230,55 +1238,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/local/home/ggbhatt/workspace/cf_ranking/cf_rank'"
+       "2.5"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pwd"
+    "0.5*5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import torch\n",
-    "import glob\n",
-    "import os\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "\n",
-    "class FeatherDataset(Dataset):\n",
-    "    def __init__(self, data_path, transform=None):\n",
-    "\n",
-    "        all_files = glob.glob(os.path.join(data_path,'*'))\n",
-    "        \n",
-    "        self.data = pd.read_feather(feather_file)\n",
-    "        self.transform = transform\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.data)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        sample = self.data.iloc[idx].to_dict()  # Convert row to dict\n",
-    "\n",
-    "        # Apply transformations if any\n",
-    "        if self.transform:\n",
-    "            sample = self.transform(sample)\n",
-    "\n",
-    "        return sample"
+    "def one_hot_binary_batch(batch):\n",
+    "    return torch.stack([1 - batch, batch], dim=1).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0.],\n",
+       "        [0., 1.],\n",
+       "        [1., 0.],\n",
+       "        [0., 1.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_hot_binary_batch(torch.tensor([0,1,0,1]))"
    ]
   },
   {
@@ -1286,11 +1294,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
@@ -1310,7 +1313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
